css/index.css
/* ... */
.sidebar .links button {
  background-color: transparent;
  color: white;
  border: none;
  font-size: 2.5rem;
}
.sidebar .links button a {
  text-decoration: none;
  color: white;
  font-size: 2rem;
}
.sidebar .links button a:hover {
  color: #ff0033;
}
.sidebar .links a {
  text-decoration: none;
  color: white;
  font-size: 1.6rem;
}
.sidebar .links a:hover {
  color: #ff0033;
}
.expanded-sidebar {
  height: 100%;
  width: 0;
  background-color: rgba(51, 0, 102, 0.9);
  position: fixed;
  left: 5%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  transition: 0.5s;
  overflow-x: hidden;
}
@media (max-width: 800px) {
  .expanded-sidebar {
    height: 0;
    left: auto;
    right: 0;
    top: 10vh;
    overflow-y: hidden;
  }
}
.expanded-sidebar a {
  text-decoration: none;
  color: white;
  font-size: 4rem;
  margin: 5% 4vw;
  min-width: 190px;
}
.expanded-sidebar a:hover {
  color: #ff0033;
}
@media (max-width: 800px) {
  .expanded-sidebar a {
    font-size: 2.5rem;
  }
}
footer {
  margin-left: 5%;
  background-color: #330066;
  color: white;
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 1%;
}
@media (max-width: 800px) {
  footer {
    margin-left: 0;
  }
}
footer p {
  width: 20%;
}
footer .logo {
  width: 15%;
}
footer .footer-links {
  display: flex;
  justify-content: flex-end;
  width: 20%;
}
footer .footer-links button {
  background-color: transparent;
  color: white;
  border: none;
  font-size: 2.5rem;
  margin: 0 4%;
}
footer .footer-links button a {
  text-decoration: none;
  color: white;
  font-size: 2rem;
}
footer .footer-links button a:hover {
  color: #ff0033;
}
header {
  margin-left: 5%;
  height: 100vh;
  background-color: #330066;
  display: flex;
  width: 95%;
  flex-wrap: wrap;
  min-height: 450px;
}
@media (max-width: 800px) {
  header {
    margin-left: 0;
    width: 100%;
  }
}
header .gallery {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-content: space-between;
}
header .gallery #pic1 {
  width: 32%;
  height: 24%;
  background-image: url("../img/surfer-walking-on-beach.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 200%;
}
@media (max-width: 800px) {
  header .gallery #pic1 {
    display: none;
  }
}
header .gallery #pic2 {
  width: 33%;
  height: 24%;
  margin: 0 1.5%;
  background-image: url("../img/man-holding-up-bolder.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
}
@media (max-width: 800px) {
  header .gallery #pic2 {
    display: none;
  }
}
header .gallery #pic3 {
  width: 32%;
  height: 24%;
  background-image: url("../img/asian-mother.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 1550px) {
  header .gallery #pic3 {
    background-size: 115%;
  }
}
@media (max-width: 800px) {
  header .gallery #pic3 {
    display: none;
  }
}
header .gallery #pic4 {
  width: 32%;
  height: 33%;
  background-image: url("../img/lookig-up-at-the-roof-of-the-forest.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 150%;
  resize: both;
}
@media (max-width: 800px) {
  header .gallery #pic4 {
    display: none;
  }
}
header .gallery #pic5 {
  width: 33%;
  height: 33%;
  margin: 0 1.5%;
  background-image: url("../img/bus-and-kayaks-on-beach.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 800px) {
  header .gallery #pic5 {
    display: none;
  }
}
header .gallery #pic6 {
  width: 32%;
  height: 33%;
  background-image: url("../img/africa-face-paint.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 1550px) {
  header .gallery #pic6 {
    background-size: 160%;
  }
}
@media (max-width: 800px) {
  header .gallery #pic6 {
    display: none;
  }
}
header .gallery #pic7 {
  width: 40%;
  height: 29%;
  background-image: url("../img/bw-man-smoking.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 1550px) {
  header .gallery #pic7 {
    background-size: 115%;
  }
}
@media (max-width: 800px) {
  header .gallery #pic7 {
    display: none;
  }
}
header .gallery #pic8 {
  width: 58.5%;
  height: 29%;
  background-image: url("../img/blond-woman-on-bridge.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 800px) {
  header .gallery #pic8 {
    display: none;
  }
}
header .gallery #pic9 {
  width: 32%;
  height: 9%;
  background-image: url("../img/looking-up-skyscraper.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 300%;
}
@media (max-width: 800px) {
  header .gallery #pic9 {
    display: none;
  }
}
header .gallery #pic10 {
  width: 33%;
  height: 9%;
  margin: 0 1.5%;
  background-image: url("../img/big-smile-in-paris.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 800px) {
  header .gallery #pic10 {
    display: none;
  }
}
header .gallery #pic11 {
  width: 32%;
  height: 9%;
  background-image: url("../img/net-architecture.jpg");
  background-color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}
@media (max-width: 800px) {
  header .gallery #pic11 {
    display: none;
  }
}
header .gallery #mobile-pic {
  display: none;
}
/* ... */

